--- a/staticfiles/styles/dashboard-pages.css
+++ b/staticfiles/styles/dashboard-pages.css
@@ -3,7 +3,6 @@ body {
 }
 
 
-
 .dashboard-sidebar {
     position: fixed;
     top: 0;
@@ -40,3 +39,12 @@ body {
     width: calc(100% - 265px);
     height: 100vh;
 }
+
+
+@media (max-width: 1200px) {
+    .page-content {
+        margin-left: 0; 
+        width: 100%;
+    }    
+}
+
