--- a/staticfiles/styles/header.css
+++ b/staticfiles/styles/header.css
@@ -9,7 +9,7 @@
     gap: 32px;
 }
 
-@media (max-width: 991px) {
+@media (max-width: 992px) {
     .header {
         height: 102px;
         padding: 16px 32px;
@@ -18,12 +18,21 @@
 
 
 @media (max-width: 576px) {
+    .nav-menu {
+        gap: 16px;
+    }
+
+    #login-btn {
+        padding: 0;
+        min-width: 0;
+    }
+
     .header {
         height: 102px;
         padding: 16px 5%;
     }
 
     .logo {
-        width: 150px;
+        width: 120px;
     }
 }
